Set background image to the app as a gradient

--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background: linear-gradient(to right bottom , #3f5efb, #fc466b) no-repeat center center fixed;
 }
-
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
