--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,7 +1,11 @@
+.search-bar:active,
+.search-bar:focus{
+    outline: none;
+}
 .search-bar:placeholder-shown{
-    font-size: 2.25rem;
+    font-size: 1.3rem;
 }
 .search-bar[type="search"]{
     line-height: normal;
-    font-size: 2.25rem;
+    font-size: 1.3rem;
 }
